--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,3 +6,30 @@ body{
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 1000px) {
+    .home-container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 20px;
+    }
+  }
+  @media only screen and (max-width: 768px) {
+    .home-container{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 20px;
+    }
+  }
